[gd_scene load_steps=8 format=2]

[ext_resource path="res://world/characters/npcs/lucia/Lucia.tscn" type="PackedScene" id=1]
[ext_resource path="res://world/utils/physics/player_detect/PlayerDetectionZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://world/characters/npcs/lucia/LuciaFollowPlayer.gd" type="Script" id=3]

[sub_resource type="AnimationNodeStateMachinePlayback" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 100.0

[sub_resource type="CircleShape2D" id=3]
radius = 40.0

[sub_resource type="CircleShape2D" id=4]
radius = 15.0

[node name="LuciaFollowPlayer" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="AnimationTree" parent="." index="4"]
parameters/playback = SubResource( 1 )

[node name="BeginFollowZone" parent="." index="6" instance=ExtResource( 2 )]
modulate = Color( 0.698039, 0.701961, 0, 0.137255 )
collision_shape = SubResource( 2 )

[node name="CloseEnoughZone" parent="." index="7" instance=ExtResource( 2 )]
modulate = Color( 0.701961, 0.279687, 0, 0.145098 )
collision_shape = SubResource( 3 )

[node name="BackUpZone" parent="." index="8" instance=ExtResource( 2 )]
modulate = Color( 0.701961, 0, 0, 0.34902 )
collision_shape = SubResource( 4 )

[connection signal="player_entered" from="BeginFollowZone" to="." method="_on_BeginFollowZone_player_entered"]
[connection signal="player_exited" from="BeginFollowZone" to="." method="_on_BeginFollowZone_player_exited"]
[connection signal="player_entered" from="CloseEnoughZone" to="." method="_on_CloseEnoughZone_player_entered"]
[connection signal="player_exited" from="CloseEnoughZone" to="." method="_on_CloseEnoughZone_player_exited"]
[connection signal="player_entered" from="BackUpZone" to="." method="_on_BackUpZone_player_entered"]
[connection signal="player_exited" from="BackUpZone" to="." method="_on_BackUpZone_player_exited"]
